--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,1 +1,31 @@
+.chat{
+  border: 2px solid;
+  border-radius: 8px;
+  margin: auto;
+  width: 50%;
+  padding: 12px;
+}
 
+#messages{
+  height: 22vh;
+  overflow-y: scroll;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#messages li {
+  padding: 8px;
+}
+
+#chat-form{
+  display: flex;
+}
+
+#send{
+  width: 70px;
+}
+
+#message-box{
+  width: 100%;
+}
