--- a/client/static/css/login.css
+++ b/client/static/css/login.css
@@ -1,3 +1,5 @@
+*{box-sizing: border-box;}
+
 .credentials{
   border: 2px solid;
   border-radius: 14px;
@@ -6,14 +8,15 @@
   padding: 12px;
 }
 
-input {
+.userinfo {padding: 14px;}
+
+input[type=text], input[type=password] {
   width: 100%;
   padding: 12px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #e0e0e0;
-  box-sizing: border-box;
 }
 
 input:focus {
@@ -33,4 +36,24 @@ input:focus {
 
 .loginbtn:hover {
   opacity: 1;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #474e5dCA;
+}
+
+.register {
+  background-color: #fefefe;
+  margin: 8% auto 15% auto;
+  width: 55%;
+  border: 1px solid;
+  border-radius: 14px;  
 }
