--- a/client/static/css/login.css
+++ b/client/static/css/login.css
@@ -1,11 +1,10 @@
 *{box-sizing: border-box;}
 
-.credentials{
+.signin{
   border: 2px solid;
   border-radius: 14px;
   margin: auto;
   width: 50%;
-  padding: 12px;
 }
 
 .userinfo {padding: 14px;}
@@ -55,5 +54,5 @@ input:focus {
   margin: 8% auto 15% auto;
   width: 55%;
   border: 1px solid;
-  border-radius: 14px;  
+  border-radius: 14px;
 }
