--- a/client/static/css/login.css
+++ b/client/static/css/login.css
@@ -5,6 +5,7 @@
   border-radius: 14px;
   margin: auto;
   width: 50%;
+  overflow: hidden;
 }
 
 .userinfo {padding: 14px;}
@@ -31,6 +32,7 @@ input:focus {
   border: none;
   width: 100%;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .loginbtn:hover {
@@ -55,4 +57,17 @@ input:focus {
   width: 55%;
   border: 1px solid;
   border-radius: 14px;
+}
+
+.createacc{
+  text-align: center;
+  font-size: 18px;
+  background-color: #F4F4F4;
+  padding: 5px;
+}
+
+.createacc a {
+  text-decoration: underline;
+  color: dodgerblue;
+  cursor: pointer;
 }
