--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -1,7 +1,9 @@
-.chat{
+.game {margin-top: 30px;}
+
+.chat, .game{
   border: 2px solid;
   border-radius: 8px;
-  margin: auto;
+  margin: 10px auto;
   width: 50%;
   padding: 12px;
 }
